Bug 14105 - libsmb: connect fails if SMB1 is enforced and client min protocol > NT1
Summary: libsmb: connect fails if SMB1 is enforced and client min protocol > NT1
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: 4.11.0rc2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba QA Contact
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-28 12:43 UTC by Björn Baumbach
Modified: 2026-03-31 03:38 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Baumbach 2019-08-28 12:43:34 UTC
Have patch, need bug number.
Comment 1 Samba QA Contact 2020-12-17 15:02:04 UTC
This bug was referenced in samba master:

f40da74e1452e73799f8643d93b8b9e572df1088
76121ae7cf4967329b9745137999fde00309c987
Comment 2 Jennifer Sutton 2026-03-31 03:38:11 UTC
Closing as fixed.